[package]
name = "metadatajni"
version = "1.0.0"
edition = "2021"

[lib]
name = "metadatajni"
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.21.0"
cxx = "1.0.137"
jni = "0.21.1"
link-cplusplus = {version = "1.0.9", features = ["nothing"]}
android_logger = { version = "0.14.1", default-features = false }
log = "0.4.20"
ctor = "0.2.6"

[build-dependencies]
cxx-build = "1.0.137"
link-cplusplus = {version = "1.0.9", features = ["nothing"]}

[profile.release]
lto = true
codegen-units = 1
strip = true
